--- a/src/ImageSlider.css
+++ b/src/ImageSlider.css
@@ -1,13 +1,13 @@
 .slider {
-  width: 100vw;
   height: 350px;
   position: relative;
   overflow: hidden;
   font-size: 0.8rem;
-  background: url(../images/sliderImage.jpg) center/cover no-repeat;
+  /*background: url(../images/sliderImage.jpg) center/cover no-repeat;*/
 }
 
 .slider .slide-wrapper {
+  width: 500vw;
   height: 350px;
   display: flex;
   position: absolute;
@@ -46,7 +46,7 @@
   color: #fff;
   text-align: center;
   position: absolute;
-  bottom: 0;
+  bottom: 10%;
   left: 10%;
   max-width: 80%;
   animation-name: move;
@@ -57,11 +57,11 @@
 
 @keyframes move {
   from {
-    transform: translateY(50%);
+    transform: translateX(50%);
     opacity: 0;
   }
   to {
-    transform: translateY(0);
+    transform: translateX(0);
     opacity: 1;
   }
 }
@@ -76,7 +76,9 @@ span .pulse {
   height: 5px;
   background-color: #fff;
   border-radius: 50%;
+  margin-left: 5px;
 }
+
 span .pulse1 {
   animation: pulse 2s ease 0.6s infinite alternate;
 }
